--- a/tictactoe.html
+++ b/tictactoe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="../css/ticTacToe.css">
+    <link rel="stylesheet" href="ticTacToe.css">
 </head>
 <body>
     <h1 class="projName">Tic-Tac-Toe game project #8</h1>
