--- a/todo.html
+++ b/todo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/todo.css">
+    <link rel="stylesheet" href="todo.css">
     <title>todo</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
         <p class="copy">&copy; umanga dhakal</p>
     </footer>
     <script src="../js/shortUrl.js"></script>
-    <script src="../js/todo.js"></script>
+    <script src="todo.js"></script>
     
 </body>
 </html>
